# fund-analysis-project

./: README.md  pyproject.toml
project/: data.ipynb  scrap.ipynb
project/files/: Funds.csv  Funds.xlsx
